<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/passwordEntryLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="0dp">

    <TextView
        android:id="@+id/site"
        android:hint="@string/site"

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/login"
        android:hint="@string/login"

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/site" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintStart_toEndOf="@+id/site" />

    <ImageButton
        android:id="@+id/optionButton"
        style="?android:attr/actionOverflowButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@string/options"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

</android.support.constraint.ConstraintLayout>
