<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/passwordEntryLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/site"
        android:hint="@string/site"
        android:inputType="text"

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/login"
        android:hint="@string/login"
        android:inputType="text"

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/site" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_toEndOf="@+id/site" />


    <ImageButton
        android:id="@+id/testImageButton"
        android:layout_width="12dp"
        android:layout_height="48dp"

        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/password"
        style="?android:attr/actionOverflowButtonStyle" />

</RelativeLayout>
